Server code optimization, and message api